@@ -449,6 +449,7 @@ void test_check_files(std::string const& test_path
 	boost::asio::io_service ios;
 	counters cnt;
 	disk_io_thread io(ios, cnt, NULL);
+	io.set_num_threads(1);
 	disk_buffer_pool dp(16 * 1024, ios, boost::bind(&nop));
 	storage_params p;
 	p.files = &fs;
